# learn-rust

./: .gitignore  README.md
bitcoin-rust-wallet/: Cargo.toml
bitcoin-rust-wallet/src/: main.rs
calculator/: README.md
calculator/src/: main.rs
combiner/src/: args.rs  main.rs
cosmWasm/: Cargo.toml
cosmWasm/src/: contract.rs  main.rs
rusttutorial/: Cargo.toml  README.md
rusttutorial/src/: main.rs
zero2prod/: Cargo.toml
zero2prod/migrations/: 20240203115343_create_subscriptions_table.sql
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs
zero2prod/src/routes/: health_check.rs  subscriptions.rs
zero2prod/tests/: health-check.rs
