[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
config = "0.11.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.130", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.23"